[package]
name = "libretto"
version = "0.1.0"
edition = "2021"

# Could be name libretto
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
serde = "1.0.152"
peekmore = "1.0.0"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"